增加了个html页面

--- a/templates/testcase_manage/login.html
+++ b/templates/testcase_manage/login.html
@@ -26,5 +26,11 @@
 				<a href="#">忘记密码？</a>
 			</div>
 		</div>
+		<script>
+			function sum(){
+				console.log("****************")
+			}
+			sum();
+		</script>
 	</body>
 </html>
