--- a/templates/casesManage/model.html
+++ b/templates/casesManage/model.html
@@ -26,18 +26,7 @@
             </div>
         </div> -->
         <div class="model-list">
-            <ul id="list">
-                <li >
-                    <div class="list-item">
-                        <p>
-                            <input type="button" style="margin-left: 15px;font-size: 14px;color: cornflowerblue;" value="全&nbsp;&nbsp;选">
-                            <input id="query1" type="submit" style="margin-left: 15px;font-size: 14px;color: cornflowerblue;" value="确&nbsp;&nbsp;定">
-                        </p>
-                        <!-- <span class="r-right glyphicon glyphicon-chevron-down"></span> -->
-                        <div class="clear"></div>
-                    </div>
-                </li>
-            </ul>
+            <ul id="list"></ul>
         </div>
     </div>
     <div class="model-right">
